feat: completed top nav

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource-variable/playfair-display": "^5.0.25",
+    "@fontsource/poppins": "^5.0.14",
     "clsx": "^2.1.1",
     "next": "14.2.5",
     "react": "^18",
